[project]
name = "poma-integrations"
dynamic = ["version"]
description = "POMA Integrations for Langchain and LlamaIndex"
authors = [{ name = "TIGON S.L.U.", email = "info@poma.science" }]
license = "MPL-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "poma-chunker",
    "doc2poma",
    "poma-senter",
    "langchain",
    "langchain-community",
    "llama_index",
    "pydantic"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "poma_integrations.version.__version__"}